Theme change and add Spring office hours

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <title>Cal Poly | Ian Dunn</title>
 
     <!-- Bootstrap -->
-    <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.0.0/litera/bootstrap.min.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.0.0/flatly/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="{{ "/css/main.css" | prepend: site.baseurl }}" rel="stylesheet">
 
